--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
+        "@material-tailwind/react": "^2.1.10",
         "daisyui": "^4.12.22",
-        "preline": "^2.6.0"
+        "preline": "^2.6.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
     }
 }
